salesforce/force-app/main/default/objects/Contact/fields/DentShift_Consent_Accepted_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Consent_Accepted_At__c</fullName>
    <label>規約同意日時</label>
    <description>規約同意日時</description>
    <inlineHelpText>規約同意日時</inlineHelpText>
    <type>DateTime</type>
</CustomField>