salesforce/force-app/main/default/objects/Contact/fields/DentShift_Email_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Email_Verified_At__c</fullName>
    <label>メール確認日時</label>
    <description>メール確認日時(本人確認)</description>
    <inlineHelpText>メール確認日時(本人確認)</inlineHelpText>
    <type>DateTime</type>
</CustomField>