salesforce/force-app/main/default/objects/Contact/fields/DentShift_Phone_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Phone_Verified_At__c</fullName>
    <label>SMS確認日時</label>
    <description>SMS確認日時(本人確認)</description>
    <inlineHelpText>SMS確認日時(本人確認)</inlineHelpText>
    <type>DateTime</type>
</CustomField>