salesforce/force-app/main/default/objects/Contact/fields/DentShift_Registration_Step__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Registration_Step__c</fullName>
    <label>登録ステップ</label>
    <description>登録ステップ</description>
    <inlineHelpText>登録ステップ</inlineHelpText>
    <type>Text</type>
    <length>20</length>
</CustomField>