salesforce/force-app/main/default/objects/Contact/fields/DentShift_Role__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Role__c</fullName>
    <label>医院内の役割</label>
    <description>医院内の役割(owner/staff/agency)</description>
    <inlineHelpText>医院内の役割(owner/staff/agency)</inlineHelpText>
    <type>Text</type>
    <length>20</length>
</CustomField>