salesforce/force-app/main/default/objects/Contact/fields/DentShift_SMS_Verification_Exempt__c.field-meta.xml
<CustomField>
    <fullName>DentShift_SMS_Verification_Exempt__c</fullName>
    <label>SMS確認の例外対象</label>
    <description>SMS確認の例外対象</description>
    <inlineHelpText>SMS確認の例外対象</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>