salesforce/force-app/main/default/objects/Contact/fields/DentShift_User_Id__c.field-meta.xml
<CustomField>
    <fullName>DentShift_User_Id__c</fullName>
    <label>DENT SHIFTのユーザーID</label>
    <description>DENT SHIFTのユーザーID(外部ID・一意)</description>
    <inlineHelpText>DENT SHIFTのユーザーID(外部ID・一意)</inlineHelpText>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>